--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h2>2025年 最新的 ChatGPT 中文版镜像网站。</h2>
             <h2>轻松使用上 ChatGPT、Claude、Grok、DeepSeek满血版 ~</h2>
             <h3>无需科学上网、无需注册账号~  </h3>
-            <a href="https://snakegpt.work" target="_self" class="button">开始对话</a>
+            <a href="https://snakegpt.com.cn" target="_self" class="button">开始对话</a>
         </div>
         <div class="arrow-down" onclick="scrollToContent()">⬇️更多ChatGPT中文版镜像网站</div>
     </div>
@@ -187,9 +187,9 @@
 
     <p><strong>全面体验 ChatGPT 镜像网站，无需翻墙，支持 GPT-4、4o、o1、o3、Grok 3、Claude和 DeepSeek R1 及中文应用</strong></p>
     <p>本项目旨在为用户提供一站式的 <strong>ChatGPT 中文版使用指南</strong>，同时整理了国内可用的 <strong>ChatGPT 镜像网站</strong>和<strong>官网使用教程</strong>，帮助您快速上手 ChatGPT，无论是个人使用还是专业需求。</p>
-    <p>ChatGPT 中文版入口：<a href="https://snakegpt.work" target="_blank">https://snakegpt.work</a></p>
+    <p>ChatGPT 中文版入口：<a href="https://snakegpt.com.cn" target="_blank">https://snakegpt.com.cn</a></p>
     <p>ChatGPT 镜像网站入口：<a href="https://gptcat.cc/" target="_blank">https://gptcat.cc/</a></p>
-    <p><strong>更新日期：2025/05/10</strong></p>
+    <p><strong>更新日期：2025/05/28</strong></p>
 
     <hr>
     <h2 id="什么是-chatgpt-中文版">什么是 ChatGPT 中文版？</h2>
@@ -217,7 +217,7 @@
             <tbody>
                 <tr>
                     <td>蛇语 AI</td>
-                    <td><a href="https://snakegpt.work">snakegpt.work</a></td>
+                    <td><a href="https://snakegpt.com.cn">snakegpt.com.cn</a></td>
                     <td>GPT-4, GPT-3.5</td>
                     <td>有</td>
                     <td>国内QQ邮箱、网易邮箱等注册</td>
